[package]
name = "kload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = "1.0.1"
clap = { version = "3.1.8", features = ["derive"] }
winapi = {version = "0.3.9", features = ["securitybaseapi", "errhandlingapi", "processthreadsapi", "winbase", "fileapi", "handleapi"]}